force-app/main/default/objects/FEC_Enhanced_Letterhead__c/FEC_Enhanced_Letterhead__c.object-meta.xml
<CustomObject>
    <description>Thiết lập Header và Footer dành cho Email Templates</description>
    <label>Enhanced Letterhead</label>
    <nameField>
        <label>Enhanced Letterhead Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Enhanced Letterheads</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>