force-app/main/default/objects/FEC_Enhanced_Letterhead__c/fields/FEC_Footer__c.field-meta.xml
<CustomField>
    <fullName>FEC_Footer__c</fullName>
    <description>Cài đặt Footer (Có thể là dạng hình ảnh/text)</description>
    <label>Footer</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>