force-app/main/default/objects/FEC_Enhanced_Letterhead__c/fields/FEC_Header__c.field-meta.xml
<CustomField>
    <fullName>FEC_Header__c</fullName>
    <description>Cài đặt Header (Có thể là dạng hình ảnh/text)</description>
    <label>Header</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>