force-app/main/default/objects/FEC_Enhanced_Letterhead__c/validationRules/FEC_Required_Header_Or_Footer.validationRule-meta.xml
<ValidationRule>
    <fullName>FEC_Required_Header_Or_Footer</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    FEC_Footer__c  == null,
    FEC_Header__c == null
)</errorConditionFormula>
    <errorMessage>The header and footer fields are empty. Add something to at least one field, then try again.</errorMessage>
</ValidationRule>